# gopy

./: .gitignore  README.md
gopy/: errors.go  pool.go  pool_test.go  types.go
gopy/test-scripts/: test_script.py
gopyadapter/: README.md  pyproject.toml
gopyadapter/src/gopyadapter/: __init__.py  core.py  log.py
