[tool.poetry]
name = "my-package"
version = "0.1.0"
description = "A brief description of your package"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_package", from = "src"}]
repository = "https://github.com/yourusername/my-package"

[tool.poetry.dependencies]
python = "^3.8"
# Add your dependencies here, for example:
# requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
