[project]
name = "gopyadapter"
version = "1.0.1"
description = "Allows easy management of a python process and calling of python from go"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Joss Peters", email = "jptrs93@gmail.com" }]
dependencies = [
    "numpy>=1.20",
    "msgpack>=1.1.0",
]

[project.urls]
Repository = "https://github.com/jptrs93/gopy/gopyadapter"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gopyadapter"]
